# nix-enter

./: .gitignore  README.md  flake.nix  pyproject.toml
docs/: USER_GUIDE.md
src/nix_enter/: __init__.py  cli.py  config.py  containerfile.py  log.py  output.py  podman.py  project.py
src/nix_enter/commands/: __init__.py  clean.py  enter.py  list_projects.py  purge.py  status.py  worktree.py
src/nix_enter/data/: restricted-network-init.sh
tests/: test_config.py  test_containerfile.py  test_log.py  test_podman.py  test_project.py  test_spawn.py  test_worktree.py
