[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nix-enter"
version = "0.2.0"
requires-python = ">=3.11"
description = "Hardened per-project podman containers for AI coding agents"

[project.scripts]
nix-enter = "nix_enter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
