[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nix-enter"
version = "0.3.0"
requires-python = ">=3.11"
description = "Hardened per-project podman containers for AI coding agents"

[project.scripts]
nix-enter = "nix_enter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nix_enter = ["data/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
